--- a/webComponent/css/H5ComponentBar.css
+++ b/webComponent/css/H5ComponentBar.css
@@ -22,6 +22,7 @@
     position: relative;
 }
 .h5_component_bar .rate .bg{
+    border-radius: 5px;
     background-color: #99c0ff;
     width: 0%;
     height: 100%;
