--- a/360star/src/css/style.css
+++ b/360star/src/css/style.css
@@ -48,3 +48,13 @@ body {
 	display: block;
 	line-height: 30px;
 }
+#canvas {
+	display: flex;
+    width: 100%;
+    height: 300px;
+    margin-top: 84px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
